fixed padding in intro on mobile

--- a/docs/_sass/base/_intro.scss
+++ b/docs/_sass/base/_intro.scss
@@ -25,7 +25,7 @@ body.home-intro {
   display: inline-block;
   max-width: $desktop-width;
   margin: auto;
-  padding: 4em 2em;
+  padding: 4em 0em;
 
   @include media($min-tablet) {
     padding: 6em 0;
